# itis-dakota

./: .gitattributes  .gitignore  .mergify.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: build-wheels.yml  buildwheels.yml  healthchecks.yml
build_backend/: build.py
itis_dakota/: __init__.py  _version.py
scripts/: fix_wheel.sh  repair_wheel.sh  repair_wheel_macos.sh
src_patches/: adaptsampl_batch.patch  boost.patch  cstdint.patch  cstdint_dak_types.patch  dakenv_restart.patch  dakota-src.patch  find_python.patch  findpython.patch  numpy_pyarray.patch  pythoninclude.patch  replace_old_macros_numpy.sed  trilinos_cmake_version.patch
src_patches_v623/: cmake_DakotaFindPython.cmake.patch  cmake_DakotaFindSystemTPLs.cmake.patch  src_CMakeLists.txt.patch
src_patches_v624/: cmake_DakotaFindPython.cmake.patch  cmake_DakotaFindSystemTPLs.cmake.patch  src_CMakeLists.txt.patch  src_dakota_python.cpp.patch
tests/: test_dakota_executable.py  test_import.py
tests/adasampling/: adasampling.in  disabled_adasampling.py
tests/moga/: moga.in  moga.json  test_moga.py
tests/simple/: simple.in  simple.json  test_simple.py
tests/simple_batch/: simple_batch.in  simple_batch.json  test_simple_batch.py
tests/simple_restart/: dakota.rst  simple.in  simple.json  test_simple_restart.py
