[project] 
name = "itis_dakota"
description = "Dakota wheel built by the IT'IS Foundation, Zurich, Switzerland"
license = { file = "LICENSE.txt" }
authors = [
    {name="Werner Van Geit"}
]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = ["numpy"]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/ITISFoundation/itis-dakota"
repository = "https://github.com/ITISFoundation/itis-dakota.git"
issues = "https://github.com/ITISFoundation/itis-dakota/issues"

[build-system]
requires = [
    "py-build-cmake",
    "cmake",
    "auditwheel",
    "setuptools",
    "setuptools_scm",
    "numpy",
    "h5py"
]
build-backend = "build_backend.build"
backend-path = ["."]

[tool.setuptools]
packages = ["itis_dakota"]
package-dir = {"itis_dakota" = "itis_dakota"}

[tool.setuptools.package-data]
itis_dakota = ["py.typed"]

[tool.setuptools_scm]
version_file = "itis_dakota/_version.py"
local_scheme = "no-local-version"

[tool.cibuildwheel]
build-verbosity = 1
build-frontend = "build[uv]"

# NOTE: We deliberately do NOT set CMAKE_*_COMPILER_LAUNCHER or
# SCCACHE_GHA_ENABLED here. They are only meaningful inside GitHub Actions
# (and would break local builds, since sccache's GHA cache backend requires
# the GHA cache service env vars). The CI workflow injects them via
# CIBW_ENVIRONMENT for runs on GitHub.

# ---------------------------------------------------------------------------
# Linux
# ---------------------------------------------------------------------------
[tool.cibuildwheel.linux]
repair-wheel-command = "./scripts/repair_wheel.sh {dest_dir} {wheel}"
before-all = [
    "pushd /opt/_internal && tar xf static-libs-for-embedding-only.tar.xz && popd",
    "yum install -y epel-release yum-utils",
    "yum-config-manager --enable epel",
    "yum makecache --refresh",
    "yum install -y lapack-devel boost1.78-devel blas-devel hdf5-devel zip unzip wget gsl-devel ccache",
    "SCCACHE_V=v0.14.0; ARCH=$(uname -m); wget -q https://github.com/mozilla/sccache/releases/download/${SCCACHE_V}/sccache-${SCCACHE_V}-${ARCH}-unknown-linux-musl.tar.gz -O /tmp/sccache.tar.gz && tar xf /tmp/sccache.tar.gz -C /tmp && cp /tmp/sccache-${SCCACHE_V}-${ARCH}-unknown-linux-musl/sccache /usr/local/bin/sccache && chmod +x /usr/local/bin/sccache && rm -rf /tmp/sccache*",
    "if [ -n \"${ACTIONS_RUNTIME_TOKEN:-}\" ]; then sccache --start-server && sccache --show-stats; else echo 'sccache not started (no GHA cache available)'; fi",
    "pip install setuptools_scm",
    "python -m setuptools_scm --force-write-version-files",
]
environment-pass = [
    "ACTIONS_RESULTS_URL",
    "ACTIONS_RUNTIME_TOKEN",
    "ACTIONS_CACHE_SERVICE_V2"
]
skip = "*-musllinux_*"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

[tool.cibuildwheel.linux.environment]
BOOST_LIBRARYDIR = "/usr/lib64/boost1.78"
BOOST_INCLUDEDIR = "/usr/include/boost1.78"

# ---------------------------------------------------------------------------
# macOS
# ---------------------------------------------------------------------------
[tool.cibuildwheel.macos]
repair-wheel-command = "./scripts/repair_wheel_macos.sh {dest_dir} {wheel} {delocate_archs}"
# NOTE: unlike Linux, cibuildwheel on macOS runs directly on the host (no
# container). Anything in `before-all` would mutate the host, so we keep
# this minimal and expect build dependencies (boost, hdf5, gsl, lapack,
# gcc/gfortran, ccache, cmake, ninja) to already be installed. CI installs
# them as an explicit step; locally install them once with `make brew-deps`.
before-all = [
    "pip install setuptools_scm delocate uv",
    "python -m setuptools_scm --force-write-version-files",
]
environment-pass = [
    "ACTIONS_RESULTS_URL",
    "ACTIONS_RUNTIME_TOKEN",
    "ACTIONS_CACHE_SERVICE_V2",
    "MACOSX_DEPLOYMENT_TARGET"
]

[tool.cibuildwheel.macos.environment]
# Use Homebrew-provided libraries. The prefix differs between Intel
# (/usr/local) and Apple Silicon (/opt/homebrew); resolve at build time.
HOMEBREW_PREFIX = "$(brew --prefix)"
BOOST_ROOT = "$(brew --prefix boost)"
BOOST_LIBRARYDIR = "$(brew --prefix boost)/lib"
BOOST_INCLUDEDIR = "$(brew --prefix boost)/include"
HDF5_ROOT = "$(brew --prefix hdf5)"
GSL_ROOT_DIR = "$(brew --prefix gsl)"
LAPACK_DIR = "$(brew --prefix lapack)"
# gfortran is required by Dakota's TPLs (BLAS/LAPACK linkage). gfortran
# is shipped by the Homebrew `gcc` formula. Use full path so CMake can
# find it even if Homebrew's bin isn't on PATH in the build isolation.
FC = "$(brew --prefix)/bin/gfortran"
# Ensure Homebrew's bin is on PATH so CMake (and other tools) can find
# Homebrew-installed binaries inside cibuildwheel's build-isolation env.
PATH = "$(brew --prefix)/bin:$PATH"
# sccache compiler launchers — sccache auto-detects the GHA cache backend
# when SCCACHE_GHA_ENABLED=true (set by CI), otherwise uses local disk cache.
CMAKE_C_COMPILER_LAUNCHER = "sccache"
CMAKE_CXX_COMPILER_LAUNCHER = "sccache"
# NOTE: We deliberately do NOT pin MACOSX_DEPLOYMENT_TARGET here. Homebrew
# bottles are built for the runner's macOS version, so forcing an older
# deployment target than the bottles causes delocate to refuse the wheel
# (libraries' LC_BUILD_VERSION exceeds the target). Letting cibuildwheel
# default to the runner OS keeps both consistent. On the GitHub runners
# this yields macosx_13_x (macos-13/x86_64) and macosx_14_0 (macos-14/arm64)
# wheels.

[tool.py-build-cmake.cmake]
source_path = "."
build_args = ["-j8"]
build_type = "Release"
install_components = ["dakota_for_python"]

[tool.py-build-cmake.cmake.options]
DAKOTA_HAVE_HDF5 = "ON"
HAVE_QUESO = "ON"
DAKOTA_HAVE_GSL = "ON"
DAKOTA_PYTHON_WRAPPER = "ON"
DAKOTA_PYTHON_DIRECT_INTERFACE = "ON"
BUILD_SHARED_LIBS = "OFF"
CMAKE_POSITION_INDEPENDENT_CODE = "ON"
CXX_FLAGS = "-w"
CMAKE_CXX_FLAGS = "-Wno-psabi"

[tool.pytest.ini_options]
addopts = "--ignore=dakota/"
