[project] 
name = "itis_dakota"
description = "Dakota wheel built by the IT'IS Foundation, Zurich, Switzerland"
license = { file = "LICENSE.txt" }
authors = [
    {name="Werner Van Geit"}
]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = ["numpy"]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/ITISFoundation/itis-dakota"
repository = "https://github.com/ITISFoundation/itis-dakota.git"
issues = "https://github.com/ITISFoundation/itis-dakota/issues"

[build-system]
requires = [
    "py-build-cmake",
    "cmake",
    "ninja",
    "auditwheel",
    "setuptools",
    "setuptools_scm",
    "numpy",
    "h5py"
]
build-backend = "build_backend.build"
backend-path = ["."]

[tool.setuptools]
packages = ["itis_dakota"]
package-dir = {"itis_dakota" = "itis_dakota"}

[tool.setuptools.package-data]
itis_dakota = ["py.typed"]

[tool.setuptools_scm]
version_file = "itis_dakota/_version.py"
local_scheme = "no-local-version"

[tool.cibuildwheel]
build-verbosity = 1
build-frontend = "build[uv]"

# NOTE: CMAKE_*_COMPILER_LAUNCHER and ccache vars are set in the
# per-platform [tool.cibuildwheel.{linux,macos}.environment] sections.
# On Linux, CCACHE_DIR points to /project/.ccache so the cache is
# persisted via actions/cache on the host; on macOS ccache uses the
# default ~/Library/Caches/ccache directory.

# ---------------------------------------------------------------------------
# Linux
# ---------------------------------------------------------------------------
[tool.cibuildwheel.linux]
repair-wheel-command = "./scripts/repair_wheel.sh {dest_dir} {wheel}"
before-all = [
    "pushd /opt/_internal && tar xf static-libs-for-embedding-only.tar.xz && popd",
    "yum install -y epel-release yum-utils",
    "yum-config-manager --enable epel",
    "yum makecache --refresh",
    "yum install -y lapack-devel boost1.78-devel blas-devel hdf5-devel zip unzip wget gsl-devel ccache ninja-build",
    "ccache --version",
    "ccache --zero-stats",
    "pip install setuptools_scm",
    "python -m setuptools_scm --force-write-version-files",
]
skip = "*-musllinux_*"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

[tool.cibuildwheel.linux.environment]
BOOST_LIBRARYDIR = "/usr/lib64/boost1.78"
BOOST_INCLUDEDIR = "/usr/include/boost1.78"
CCACHE_DIR = "/project/.ccache"
CCACHE_MAXSIZE = "1G"
CCACHE_COMPRESS = "true"
CCACHE_BASEDIR = "/project"
CCACHE_SLOPPINESS = "include_file_mtime,include_file_ctime,time_macros,pch_defines,file_stat_matches,clang_index_store,system_headers,locale"
CCACHE_NOHASHDIR = "true"
CMAKE_C_COMPILER_LAUNCHER = "ccache"
CMAKE_CXX_COMPILER_LAUNCHER = "ccache"

# ---------------------------------------------------------------------------
# macOS
# ---------------------------------------------------------------------------
[tool.cibuildwheel.macos]
repair-wheel-command = "./scripts/repair_wheel_macos.sh {dest_dir} {wheel} {delocate_archs}"
before-build = "ccache --show-stats 2>/dev/null | grep -E 'Hits|Misses|hit rate' || true"
# NOTE: unlike Linux, cibuildwheel on macOS runs directly on the host (no
# container). Anything in `before-all` would mutate the host, so we keep
# this minimal and expect build dependencies (boost, hdf5, gsl, lapack,
# gcc/gfortran, ccache, cmake, ninja) to already be installed. CI installs
# them as an explicit step; locally install them once with `make brew-deps`.
before-all = [
    "pip install setuptools_scm delocate uv",
    "python -m setuptools_scm --force-write-version-files",
]
environment-pass = [
    "MACOSX_DEPLOYMENT_TARGET"
]

[tool.cibuildwheel.macos.environment]
# Use Homebrew-provided libraries. The prefix differs between Intel
# (/usr/local) and Apple Silicon (/opt/homebrew); resolve at build time.
HOMEBREW_PREFIX = "$(brew --prefix)"
BOOST_ROOT = "$(brew --prefix boost)"
BOOST_LIBRARYDIR = "$(brew --prefix boost)/lib"
BOOST_INCLUDEDIR = "$(brew --prefix boost)/include"
HDF5_ROOT = "$(brew --prefix hdf5)"
GSL_ROOT_DIR = "$(brew --prefix gsl)"
LAPACK_DIR = "$(brew --prefix lapack)"
# gfortran is required by Dakota's TPLs (BLAS/LAPACK linkage). gfortran
# is shipped by the Homebrew `gcc` formula. Use full path so CMake can
# find it even if Homebrew's bin isn't on PATH in the build isolation.
FC = "$(brew --prefix)/bin/gfortran"
# Ensure Homebrew's bin is on PATH so CMake (and other tools) can find
# Homebrew-installed binaries inside cibuildwheel's build-isolation env.
PATH = "$(brew --prefix)/bin:$PATH"
# ccache compiler launchers — ccache uses local disk cache, persisted
# across CI runs via actions/cache.
# CCACHE_BASEDIR + CCACHE_SLOPPINESS + CCACHE_NOHASHDIR prevent cache
# misses caused by pip's random build-isolation temp directories
# (Python/numpy include paths change each cibuildwheel invocation).
CCACHE_BASEDIR = "/Users"
CCACHE_SLOPPINESS = "include_file_mtime,include_file_ctime,time_macros,pch_defines,file_stat_matches,clang_index_store,system_headers,locale"
CCACHE_NOHASHDIR = "true"
CMAKE_C_COMPILER_LAUNCHER = "ccache"
CMAKE_CXX_COMPILER_LAUNCHER = "ccache"
# NOTE: We deliberately do NOT pin MACOSX_DEPLOYMENT_TARGET here. Homebrew
# bottles are built for the runner's macOS version, so forcing an older
# deployment target than the bottles causes delocate to refuse the wheel
# (libraries' LC_BUILD_VERSION exceeds the target). Letting cibuildwheel
# default to the runner OS keeps both consistent. On the GitHub runners
# this yields macosx_13_x (macos-13/x86_64) and macosx_14_0 (macos-14/arm64)
# wheels.

[tool.py-build-cmake.cmake]
source_path = "."
generator = "Ninja"
build_type = "Release"
install_components = ["dakota_for_python"]

[tool.py-build-cmake.cmake.options]
DAKOTA_HAVE_HDF5 = "ON"
HAVE_QUESO = "ON"
DAKOTA_HAVE_GSL = "ON"
DAKOTA_PYTHON_WRAPPER = "ON"
DAKOTA_PYTHON_DIRECT_INTERFACE = "ON"
BUILD_SHARED_LIBS = "OFF"
CMAKE_POSITION_INDEPENDENT_CODE = "ON"
CXX_FLAGS = "-w"
CMAKE_CXX_FLAGS = "-Wno-psabi"

# Homebrew Boost 1.90's BoostConfig.cmake is broken (missing
# per-component configs). Force the legacy FindBoost module on macOS.
[tool.py-build-cmake.mac.cmake.options]
Boost_NO_BOOST_CMAKE = "ON"

[tool.pytest.ini_options]
addopts = "--ignore=dakota/ --ignore=tmp/"
